--- a/WindowExplorer/Sources/Controllers/RecordViewController/Views/RelatedItemViews/RelatedItemListView.xib
+++ b/WindowExplorer/Sources/Controllers/RecordViewController/Views/RelatedItemViews/RelatedItemListView.xib
@@ -5,7 +5,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="RelatedItemView" customModule="WindowExplorer" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="RelatedItemListView" customModule="WindowExplorer" customModuleProvider="target">
             <connections>
                 <outlet property="descriptionView" destination="tzF-dV-bDK" id="2rQ-s9-Xl4"/>
                 <outlet property="mediaImageView" destination="GPP-LU-OnZ" id="ZIK-hb-e7x"/>
