--- a/WindowExplorer/Sources/Controllers/MenuViewController/Menu.storyboard
+++ b/WindowExplorer/Sources/Controllers/MenuViewController/Menu.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14109"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
-        <capability name="stacking Non-gravity area distributions on NSStackView" minToolsVersion="7.0" minSystemVersion="10.11"/>
     </dependencies>
     <scenes>
         <!--Menu View Controller-->
@@ -11,50 +10,77 @@
             <objects>
                 <viewController id="AWf-NK-kp0" customClass="MenuViewController" customModule="WindowExplorer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="AdH-oQ-xB7">
-                        <rect key="frame" x="0.0" y="0.0" width="100" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="50" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KcA-Ro-iLC">
-                                <rect key="frame" x="0.0" y="0.0" width="100" height="300"/>
-                                <subviews>
-                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1uv-Ha-1ob">
-                                        <rect key="frame" x="0.0" y="58" width="100" height="242"/>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="58J-QZ-CyQ"/>
-                                    </imageView>
-                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yqt-x9-nG0">
-                                        <rect key="frame" x="0.0" y="0.0" width="100" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="GWW-GA-IeA"/>
-                                        </constraints>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="7ey-20-Jy8"/>
-                                    </imageView>
-                                </subviews>
+                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XSL-8U-p48">
+                                <rect key="frame" x="0.0" y="250" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="1uv-Ha-1ob" secondAttribute="trailing" id="1gu-Jo-IQr"/>
-                                    <constraint firstItem="1uv-Ha-1ob" firstAttribute="top" secondItem="KcA-Ro-iLC" secondAttribute="top" id="4qZ-rI-Fua"/>
-                                    <constraint firstItem="yqt-x9-nG0" firstAttribute="leading" secondItem="KcA-Ro-iLC" secondAttribute="leading" id="ZpK-9D-FgG"/>
-                                    <constraint firstAttribute="height" constant="300" id="hDA-yR-NX7"/>
-                                    <constraint firstAttribute="trailing" secondItem="yqt-x9-nG0" secondAttribute="trailing" id="lMA-qx-nZC"/>
-                                    <constraint firstAttribute="width" constant="100" id="mU9-XE-3sQ"/>
-                                    <constraint firstItem="1uv-Ha-1ob" firstAttribute="leading" secondItem="KcA-Ro-iLC" secondAttribute="leading" id="q6b-26-3rF"/>
+                                    <constraint firstAttribute="height" constant="50" id="tgK-0D-WW1"/>
                                 </constraints>
-                                <visibilityPriorities>
-                                    <integer value="1000"/>
-                                    <integer value="1000"/>
-                                </visibilityPriorities>
-                                <customSpacing>
-                                    <real value="3.4028234663852886e+38"/>
-                                    <real value="3.4028234663852886e+38"/>
-                                </customSpacing>
-                            </stackView>
+                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="s3y-ox-dYc"/>
+                            </imageView>
+                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YH7-tX-fhw">
+                                <rect key="frame" x="0.0" y="200" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="mz3-xN-JgI"/>
+                                </constraints>
+                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="ZZq-63-8Q9"/>
+                            </imageView>
+                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="w1D-MX-hx3">
+                                <rect key="frame" x="0.0" y="150" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="4jJ-XJ-ov1"/>
+                                </constraints>
+                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="Pan-ey-4a3"/>
+                            </imageView>
+                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FRJ-wF-ukw">
+                                <rect key="frame" x="0.0" y="100" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="NM9-Sv-kbi"/>
+                                </constraints>
+                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="Zwa-5w-z3R"/>
+                            </imageView>
+                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ed7-a7-wxz">
+                                <rect key="frame" x="0.0" y="50" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Zef-0g-RyZ"/>
+                                </constraints>
+                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="Nka-6M-Vao"/>
+                            </imageView>
+                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fLv-1R-6Ot">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="QCx-g6-cHZ"/>
+                                </constraints>
+                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="y54-2S-Nvq"/>
+                            </imageView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="KcA-Ro-iLC" firstAttribute="top" secondItem="AdH-oQ-xB7" secondAttribute="top" id="70F-76-O5s"/>
-                            <constraint firstAttribute="bottom" secondItem="KcA-Ro-iLC" secondAttribute="bottom" id="XX7-S2-KXk"/>
-                            <constraint firstAttribute="trailing" secondItem="KcA-Ro-iLC" secondAttribute="trailing" id="fs4-sb-uf9"/>
-                            <constraint firstItem="KcA-Ro-iLC" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="s1j-Zk-eBr"/>
+                            <constraint firstItem="w1D-MX-hx3" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="5As-qM-tsS"/>
+                            <constraint firstAttribute="trailing" secondItem="w1D-MX-hx3" secondAttribute="trailing" id="7rn-Of-vpW"/>
+                            <constraint firstItem="XSL-8U-p48" firstAttribute="top" secondItem="AdH-oQ-xB7" secondAttribute="top" id="8oy-po-788"/>
+                            <constraint firstItem="YH7-tX-fhw" firstAttribute="top" secondItem="XSL-8U-p48" secondAttribute="bottom" id="Dih-s6-6dt"/>
+                            <constraint firstAttribute="trailing" secondItem="ed7-a7-wxz" secondAttribute="trailing" id="DrW-xJ-6NL"/>
+                            <constraint firstItem="YH7-tX-fhw" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="Dwx-Gl-ro4"/>
+                            <constraint firstAttribute="trailing" secondItem="YH7-tX-fhw" secondAttribute="trailing" id="IA7-dL-8OL"/>
+                            <constraint firstItem="FRJ-wF-ukw" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="IY4-1Y-mU9"/>
+                            <constraint firstItem="fLv-1R-6Ot" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="QyI-Yz-Gav"/>
+                            <constraint firstAttribute="bottom" secondItem="fLv-1R-6Ot" secondAttribute="bottom" id="S3q-g8-aJ0"/>
+                            <constraint firstItem="w1D-MX-hx3" firstAttribute="top" secondItem="YH7-tX-fhw" secondAttribute="bottom" id="Ujs-dC-BoZ"/>
+                            <constraint firstItem="FRJ-wF-ukw" firstAttribute="top" secondItem="w1D-MX-hx3" secondAttribute="bottom" id="VTd-4N-KGA"/>
+                            <constraint firstItem="ed7-a7-wxz" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="XHv-M6-mRb"/>
+                            <constraint firstItem="ed7-a7-wxz" firstAttribute="top" secondItem="FRJ-wF-ukw" secondAttribute="bottom" id="Yqv-AT-eNo"/>
+                            <constraint firstItem="fLv-1R-6Ot" firstAttribute="top" secondItem="ed7-a7-wxz" secondAttribute="bottom" id="d6o-d7-Wgm"/>
+                            <constraint firstItem="XSL-8U-p48" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="f2c-L8-aLx"/>
+                            <constraint firstAttribute="trailing" secondItem="XSL-8U-p48" secondAttribute="trailing" id="kzE-ps-2Wr"/>
+                            <constraint firstAttribute="trailing" secondItem="fLv-1R-6Ot" secondAttribute="trailing" id="lqH-88-4my"/>
+                            <constraint firstAttribute="trailing" secondItem="FRJ-wF-ukw" secondAttribute="trailing" id="mpF-LE-HQf"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="splitScreen" destination="XSL-8U-p48" id="luM-fH-daB"/>
+                    </connections>
                 </viewController>
                 <customObject id="vEQ-kv-rRL" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
